--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,6 +4,7 @@
 @import 'colors';
 @import 'contact';
 @import 'dontate';
+@import 'edit-profile';
 @import 'fonts';
 @import 'footer';
 @import 'home';
@@ -15,6 +16,7 @@
 @import 'profile';
 @import 'signup';
 @import 'stories';
+@import 'verify-email';
 @import 'volunteer';
 
 //Font Awesome
