--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -26,10 +26,14 @@
 
 .edit-profile-button {
   align-self: flex-start;
+  border-radius: .5rem;
+  color: $white;
+  cursor: pointer;
   font-size: 1rem;
   grid-column: 4;
   grid-row: 2;
   justify-self: center;
+  margin-top: .5rem;
   width: auto;
 
   &::before {
