--- a/styles/signup.scss
+++ b/styles/signup.scss
@@ -6,6 +6,9 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 400px;
   justify-content: center;
 }
 
