--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -79,7 +79,9 @@
 }
 
 .donate-button {
+  margin-bottom: auto;
   margin-right: .5rem;
+  margin-top: auto;
 }
 
 .login-button {
@@ -161,6 +163,8 @@
     font-size: 1rem;
     font-weight: normal;
     height: 2rem;
+    margin-bottom: 0;
+    margin-top: 0;
     padding: .5rem;
   }
 
