auto refresh rsvp, style update, show attendees rather than rsvp count

--- a/styles/volunteer.scss
+++ b/styles/volunteer.scss
@@ -187,9 +187,7 @@
   border-radius: .5rem;
   display: flex;
   font-size: .8rem;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: .5rem;
+  margin: .5rem auto;
 }
 
 .event-form {
