--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2892,9 +2892,7 @@ p .index-inspire-change-text {
   border-radius: 0.5rem;
   display: flex;
   font-size: 0.8rem;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0.5rem;
+  margin: 0.5rem auto;
 }
 
 .event-form {
@@ -3863,9 +3861,7 @@ textarea.event-description-input {
   border-radius: 0.5rem;
   display: flex;
   font-size: 0.8rem;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0.5rem;
+  margin: 0.5rem auto;
 }
 
 .event-form {
