Update to edit profile styling

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -11,6 +11,7 @@ $red: #f00;
 $black: #000;
 $light-gray: #e5e5e4;
 $table-gray: #ddd;
+$med-gray: #ccc;
 $profile-text-gray: #aaa;
 $dark-blue: #00f;
 $facebook-blue: #4267b2;
