--- a/styles/styles.css
+++ b/styles/styles.css
@@ -497,47 +497,94 @@
     width: auto;
   }
 }
-.edit-profile-label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 5px;
+.edit-profile-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
 }
-.edit-profile-label img {
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
-}
-
-.edit-profile-input,
-.edit-profile-textarea {
-  border: 1px solid #e5e5e4;
-  border-radius: 3px;
-  padding: 10px;
+.edit-profile-container form {
+  background: #e5e5e4;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #e5e5e4;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75%;
+  padding: 30px;
   width: 100%;
 }
 
-.edit-profile-select {
-  height: 50px;
+.edit-profile-label {
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
-.profile-preview {
-  display: block;
-  height: 100px;
-  margin-top: 10px;
-  width: 100px;
+.edit-profile-photo {
+  align-items: center;
+  display: flex;
+  margin-bottom: 10px;
+}
+.edit-profile-photo img {
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+}
+.edit-profile-photo-button {
+  border-radius: 0.5rem;
+  font-size: 0.75rem;
+  margin-bottom: 1rem;
+  width: 200px;
 }
 
+.edit-profile-photo-button,
 .edit-profile-submit-button {
   background: #015e41;
   border: 0;
-  border-radius: 0.5rem;
+  border-radius: 5px;
   color: #fff;
   cursor: pointer;
   padding: 10px 20px;
-  transition: background 0.3s;
+  transition: background 0.3s ease;
 }
+.edit-profile-photo-button:hover,
 .edit-profile-submit-button:hover {
   background: #4267b2;
+}
+
+.edit-profile-name-input {
+  width: 33%;
+}
+
+.edit-profile-organization-select {
+  width: 33%;
+}
+
+.edit-profile-bio-textarea {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  min-height: 80px;
+  overflow-wrap: break-word;
+  padding: 10px;
+  resize: vertical;
+  white-space: pre-wrap;
+  width: 90%;
+}
+
+.edit-profile-submit-button {
+  display: block;
+  margin-top: 20px;
+  width: 200px;
+}
+
+[disabled] {
+  background: #ccc;
+  cursor: not-allowed;
+}
+
+.edit-profile-file-input {
+  display: none;
 }
 
 .address-link:hover {
@@ -2176,12 +2223,12 @@ p .index-inspire-change-text {
 .profile-page-picture img {
   border: 2px solid #015e41;
   border-radius: 50%;
-  grid-column: 4;
+  grid-column: 1;
   grid-row: 1;
-  height: 150px;
+  height: 200px;
   justify-self: center;
   object-fit: cover;
-  width: 150px;
+  width: 200px;
 }
 
 .edit-profile-button {
@@ -2190,11 +2237,11 @@ p .index-inspire-change-text {
   color: #fff;
   cursor: pointer;
   font-size: 1rem;
-  grid-column: 4;
+  grid-column: 1;
   grid-row: 2;
   justify-self: center;
   margin-top: 0.5rem;
-  width: auto;
+  width: 200px;
 }
 .edit-profile-button::before {
   white-space: normal;
@@ -3134,12 +3181,12 @@ textarea.event-description-input {
 .profile-page-picture img {
   border: 2px solid #015e41;
   border-radius: 50%;
-  grid-column: 4;
+  grid-column: 1;
   grid-row: 1;
-  height: 150px;
+  height: 200px;
   justify-self: center;
   object-fit: cover;
-  width: 150px;
+  width: 200px;
 }
 
 .edit-profile-button {
@@ -3148,11 +3195,11 @@ textarea.event-description-input {
   color: #fff;
   cursor: pointer;
   font-size: 1rem;
-  grid-column: 4;
+  grid-column: 1;
   grid-row: 2;
   justify-self: center;
   margin-top: 0.5rem;
-  width: auto;
+  width: 200px;
 }
 .edit-profile-button::before {
   white-space: normal;
