--- a/styles/edit-profile.scss
+++ b/styles/edit-profile.scss
@@ -62,10 +62,14 @@
 }
 
 .edit-profile-name-input {
+  padding-left: .5rem;
   width: 33%;
 }
 
 .edit-profile-organization-select {
+  background-color: $white;
+  color: $black;
+  text-decoration: none;
   width: 33%;
 }
 
@@ -96,4 +100,37 @@
   display: none;
 }
 
+@media (max-width: 76.5rem) {
+  .edit-profile-container {
 
+    form {
+      max-width: 100%;
+      width: 100%;
+    }
+  }
+
+  .edit-profile- {
+    &label {
+      font-size: .75rem;
+    }
+
+    &name-input {
+      font-size: .75rem;
+      width: 90%;
+    }
+
+    &organization-select {
+      font-size: .75rem;
+      width: 90%;
+    }
+
+    &bio-textarea {
+      font-size: .75rem;
+      min-height: 150px;
+    }
+  }
+
+  .edit-profile-submit-button {
+    font-size: .75rem;
+  }
+}
