--- a/styles/home.scss
+++ b/styles/home.scss
@@ -83,11 +83,64 @@ p {
 }
 
 .index-more-stories-button {
-  padding-left: 1rem;
+  display: inline;
+  margin-left: 1rem;
+  position: relative;
   text-decoration: none;
+  top: -5px;
 
   button {
     border-radius: .5rem;
+    display: inline;
+  }
+}
+
+.home-carousel-section {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+
+  &-text {
+    color: $table-highlight-green;
+    display: inline-block;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    line-height: 1.5;
+    margin-left: 3rem;
+    max-width: calc(100% - 10rem);
+    word-wrap: break-word;
+  }
+}
+
+
+// Carousel
+.carousel-container {
+  height: 300px;
+  margin-top: 3rem;
+  overflow: hidden;
+  position: relative;
+  width: 800px;
+}
+
+.carousel-slide {
+  height: 100%;
+  position: relative;
+  width: 100%;
+}
+
+.carousel-page {
+  background-position: center;
+  background-size: cover;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: opacity 1.8s ease-in;
+
+  &.active {
+    opacity: 1;
   }
 }
 
@@ -131,9 +184,11 @@ p {
   .index-more-stories-button {
     display: flex;
     justify-content: flex-start;
+    margin-left: 0;
     padding-left: 0;
 
     button {
+      font-size: .75rem;
       margin-bottom: 1rem;
       margin-top: 1rem;
     }
@@ -150,6 +205,30 @@ p {
       font-size: 1rem;
       padding: 1rem;
     }
+  }
+
+
+  .home-carousel-section {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+
+    &-text {
+      font-size: .9rem;
+      letter-spacing: 1px;
+      line-height: 1.25;
+      margin-left: 1rem;
+      max-width: calc(100% - 5rem);
+    }
+  }
+
+  // Carousel
+  .carousel-container {
+    height: 150px;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    margin-top: 2rem;
+    width: 500px;
   }
 }
 
