--- a/styles/home.scss
+++ b/styles/home.scss
@@ -106,8 +106,8 @@ p {
     font-size: 2rem;
     letter-spacing: 2px;
     line-height: 1.5;
-    margin-left: 3rem;
-    max-width: calc(100% - 10rem);
+    margin-left: 4rem;
+    max-width: calc(56%);
     word-wrap: break-word;
   }
 }
