--- a/styles/home.scss
+++ b/styles/home.scss
@@ -92,13 +92,18 @@ p {
   button {
     border-radius: .5rem;
     display: inline;
+    transition: background-color .5s ease;
+
+    &:hover {
+      background-color: $facebook-blue;
+    }
   }
 }
 
 .home-carousel-section {
   align-items: center;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: .7fr 1fr;
 
   &-text {
     color: $table-highlight-green;
@@ -106,44 +111,69 @@ p {
     font-size: 2rem;
     letter-spacing: 2px;
     line-height: 1.5;
-    margin-left: 4rem;
-    max-width: calc(56%);
+    margin-left: 2.25rem;
+    max-width: calc(100%);
     word-wrap: break-word;
   }
 }
 
-
 // Carousel
 .carousel-container {
   height: 300px;
-  margin-top: 3rem;
   overflow: hidden;
-  position: relative;
-  width: 800px;
-}
-
-.carousel-slide {
-  height: 100%;
   position: relative;
   width: 100%;
 }
 
+.carousel-slide {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
 .carousel-page {
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  bottom: 0;
+  height: 100%;
   left: 0;
   opacity: 0;
   position: absolute;
-  right: 0;
   top: 0;
-  transition: opacity 1.8s ease-in;
+  transition: opacity 1.8s ease;
+  width: 100%;
+  z-index: 1;
 
   &.active {
     opacity: 1;
   }
 }
 
+.carousel-dots {
+  align-items: center;
+  bottom: 10px;
+  display: flex;
+  justify-content: center;
+  left: 50%;
+  opacity: .8;
+  position: absolute;
+  transform: translateX(-50%);
+  z-index: 3;
+}
+
+.carousel-dot {
+  background-color: $light-gray;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 10px;
+  margin: 0 5px;
+  width: 10px;
+
+  &.active {
+    background-color: $facebook-blue;
+    opacity: 1;
+  }
+}
 
 @media (max-width: 76.5rem) {
   .index-wrapper {
@@ -229,6 +259,16 @@ p {
     margin-left: 1rem;
     margin-top: 2rem;
     width: 500px;
+  }
+
+  .carousel-dots {
+    width: 90%;
+  }
+
+  .carousel-dot {
+    height: 5px;
+    margin: 0 3px;
+    width: 5px;
   }
 }
 
