--- a/styles/styles.css
+++ b/styles/styles.css
@@ -739,12 +739,16 @@ p .index-inspire-change-text {
 .index-more-stories-button button {
   border-radius: 0.5rem;
   display: inline;
+  transition: background-color 0.5s ease;
+}
+.index-more-stories-button button:hover {
+  background-color: #4267b2;
 }
 
 .home-carousel-section {
   align-items: center;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 0.7fr 1fr;
 }
 .home-carousel-section-text {
   color: #4caf50;
@@ -752,37 +756,63 @@ p .index-inspire-change-text {
   font-size: 2rem;
   letter-spacing: 2px;
   line-height: 1.5;
-  margin-left: 4rem;
-  max-width: 56%;
+  margin-left: 2.25rem;
+  max-width: 100%;
   word-wrap: break-word;
 }
 
 .carousel-container {
   height: 300px;
-  margin-top: 3rem;
   overflow: hidden;
-  position: relative;
-  width: 800px;
-}
-
-.carousel-slide {
-  height: 100%;
   position: relative;
   width: 100%;
 }
 
+.carousel-slide {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
 .carousel-page {
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  bottom: 0;
+  height: 100%;
   left: 0;
   opacity: 0;
   position: absolute;
-  right: 0;
   top: 0;
-  transition: opacity 1.8s ease-in;
+  transition: opacity 1.8s ease;
+  width: 100%;
+  z-index: 1;
 }
 .carousel-page.active {
+  opacity: 1;
+}
+
+.carousel-dots {
+  align-items: center;
+  bottom: 10px;
+  display: flex;
+  justify-content: center;
+  left: 50%;
+  opacity: 0.8;
+  position: absolute;
+  transform: translateX(-50%);
+  z-index: 3;
+}
+
+.carousel-dot {
+  background-color: #e5e5e4;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 10px;
+  margin: 0 5px;
+  width: 10px;
+}
+.carousel-dot.active {
+  background-color: #4267b2;
   opacity: 1;
 }
 
@@ -854,6 +884,14 @@ p .index-inspire-change-text {
     margin-left: 1rem;
     margin-top: 2rem;
     width: 500px;
+  }
+  .carousel-dots {
+    width: 90%;
+  }
+  .carousel-dot {
+    height: 5px;
+    margin: 0 3px;
+    width: 5px;
   }
 }
 @media (max-width: 102.25rem) and (orientation: landscape) {
@@ -1836,12 +1874,16 @@ p .index-inspire-change-text {
 .index-more-stories-button button {
   border-radius: 0.5rem;
   display: inline;
+  transition: background-color 0.5s ease;
+}
+.index-more-stories-button button:hover {
+  background-color: #4267b2;
 }
 
 .home-carousel-section {
   align-items: center;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 0.7fr 1fr;
 }
 .home-carousel-section-text {
   color: #4caf50;
@@ -1849,37 +1891,63 @@ p .index-inspire-change-text {
   font-size: 2rem;
   letter-spacing: 2px;
   line-height: 1.5;
-  margin-left: 4rem;
-  max-width: 56%;
+  margin-left: 2.25rem;
+  max-width: 100%;
   word-wrap: break-word;
 }
 
 .carousel-container {
   height: 300px;
-  margin-top: 3rem;
   overflow: hidden;
-  position: relative;
-  width: 800px;
-}
-
-.carousel-slide {
-  height: 100%;
   position: relative;
   width: 100%;
 }
 
+.carousel-slide {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
 .carousel-page {
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  bottom: 0;
+  height: 100%;
   left: 0;
   opacity: 0;
   position: absolute;
-  right: 0;
   top: 0;
-  transition: opacity 1.8s ease-in;
+  transition: opacity 1.8s ease;
+  width: 100%;
+  z-index: 1;
 }
 .carousel-page.active {
+  opacity: 1;
+}
+
+.carousel-dots {
+  align-items: center;
+  bottom: 10px;
+  display: flex;
+  justify-content: center;
+  left: 50%;
+  opacity: 0.8;
+  position: absolute;
+  transform: translateX(-50%);
+  z-index: 3;
+}
+
+.carousel-dot {
+  background-color: #e5e5e4;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 10px;
+  margin: 0 5px;
+  width: 10px;
+}
+.carousel-dot.active {
+  background-color: #4267b2;
   opacity: 1;
 }
 
@@ -1951,6 +2019,14 @@ p .index-inspire-change-text {
     margin-left: 1rem;
     margin-top: 2rem;
     width: 500px;
+  }
+  .carousel-dots {
+    width: 90%;
+  }
+  .carousel-dot {
+    height: 5px;
+    margin: 0 3px;
+    width: 5px;
   }
 }
 @media (max-width: 102.25rem) and (orientation: landscape) {
