--- a/styles/styles.css
+++ b/styles/styles.css
@@ -554,12 +554,16 @@
 }
 
 .edit-profile-name-input {
+  border: 1px solid #ccc;
+  border-radius: 5px;
   padding-left: 0.5rem;
   width: 33%;
 }
 
 .edit-profile-organization-select {
   background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
   color: #000;
   text-decoration: none;
   width: 33%;
