--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3340,6 +3340,18 @@ textarea.event-description-input {
   .rbc-toolbar button {
     font-size: 1.125rem;
   }
+  .create-event-buttons .event-submit {
+    border-radius: 0.5rem;
+    font-weight: normal;
+    margin-right: 0.5rem;
+    width: 100px;
+  }
+  .create-event-buttons .event-submit-cancel {
+    border-radius: 0.5rem;
+    font-weight: normal;
+    margin-left: 0.5rem;
+    width: 100px;
+  }
   .rbc-toolbar-label {
     font-size: 2.25rem;
   }
@@ -4316,6 +4328,18 @@ textarea.event-description-input {
   }
   .rbc-toolbar button {
     font-size: 1.125rem;
+  }
+  .create-event-buttons .event-submit {
+    border-radius: 0.5rem;
+    font-weight: normal;
+    margin-right: 0.5rem;
+    width: 100px;
+  }
+  .create-event-buttons .event-submit-cancel {
+    border-radius: 0.5rem;
+    font-weight: normal;
+    margin-left: 0.5rem;
+    width: 100px;
   }
   .rbc-toolbar-label {
     font-size: 2.25rem;
