LTRPICWEB-186 - Couldn't find root cause of how a NaN was allowed but updated styling while in the code.

--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -248,6 +248,20 @@
     border-radius: .5em;
     margin-top: .5rem;
   }
+
+  img {
+    max-width: 40vw;
+    object-fit: cover;
+  }
+
+  input {
+    width: 600px;
+  }
+
+  textarea {
+    height: 100px;
+    width: 600px;
+  }
 }
 
 .meatball-menu {
@@ -377,6 +391,15 @@
     img {
       max-width: 99vw;
       object-fit: cover;
+    }
+
+    input {
+      width: 80vw;
+    }
+
+    textarea {
+      height: 100px;
+      width: 80vw;
     }
   }
 }
