--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2892,6 +2892,7 @@ p .index-inspire-change-text {
 .grayed-out {
   color: #808080;
   cursor: not-allowed;
+  font-size: 1rem;
   margin-left: 0.5rem;
 }
 
@@ -3888,6 +3889,7 @@ textarea.event-description-input {
 .grayed-out {
   color: #808080;
   cursor: not-allowed;
+  font-size: 1rem;
   margin-left: 0.5rem;
 }
 
