--- a/styles/signup.scss
+++ b/styles/signup.scss
@@ -19,6 +19,12 @@
   justify-content: center;
 }
 
+.migrated-user-forgot-password {
+  font-style: italic;
+  font-weight: normal;
+  text-decoration: none;
+}
+
 .signup-email,
 .signup-password,
 .signup-confirm-password {
