--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -13,6 +13,7 @@ $light-gray: #e5e5e4;
 $table-gray: #ddd;
 $med-gray: #ccc;
 $profile-text-gray: #aaa;
+$dark-gray: #808080;
 $dark-blue: #00f;
 $facebook-blue: #4267b2;
 $instagram-pink: #c13584;
