--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -246,7 +246,13 @@
 
   button {
     border-radius: .5em;
+    font-size: 1rem;
+    font-weight: normal;
     margin-top: .5rem;
+
+    &:hover {
+      background-color: $facebook-blue;
+    }
   }
 
   img {
@@ -269,12 +275,30 @@
   font-size: .7rem;
   margin-bottom: 1rem;
   margin-left: .5rem;
-  margin-top: -.5rem;
+  margin-top: .25rem;
 }
 
 .create-post-file-input {
   margin: 0;
   padding: 0;
+}
+
+.custom-file-button {
+  background-color: $litterpic-green;
+  border: 0;
+  border-radius: .5rem;
+  color: $white;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Poppins, sans-serif;
+  font-size: 1rem;
+  padding: .25rem .5rem;
+  text-align: center;
+  text-decoration: none;
+
+  &:hover {
+    background-color: $facebook-blue;
+  }
 }
 
 .meatball-menu {
@@ -286,12 +310,11 @@
 }
 
 .grayed-out {
-  color: #808080;
+  color: $dark-gray;
   cursor: not-allowed;
   font-size: 1rem;
   margin-left: .5rem;
 }
-
 
 .post-dropdown-menu {
   background-color: $gray;
@@ -308,17 +331,19 @@
 
   ul {
     list-style: none;
-    margin: 0;
-    margin-top: 1rem;
+    margin: 1rem 0 0;
     padding: 0;
   }
 
-  li:not(.grayed-out) {
-    cursor: pointer;
-    font-family: Rubik, Times, sans-serif;
-    font-size: 1rem;
-    margin-left: .5rem;
-    padding: 0;
+  li {
+
+    &:not(.grayed-out) {
+      cursor: pointer;
+      font-family: Rubik, Times, sans-serif;
+      font-size: 1rem;
+      margin-left: .5rem;
+      padding: 0;
+    }
 
     &:hover {
       color: $litterpic-green;
