--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2874,7 +2874,12 @@ p .index-inspire-change-text {
 }
 .create-post-content button {
   border-radius: 0.5em;
+  font-size: 1rem;
+  font-weight: normal;
   margin-top: 0.5rem;
+}
+.create-post-content button:hover {
+  background-color: #4267b2;
 }
 .create-post-content img {
   max-width: 40vw;
@@ -2893,12 +2898,29 @@ p .index-inspire-change-text {
   font-size: 0.7rem;
   margin-bottom: 1rem;
   margin-left: 0.5rem;
-  margin-top: -0.5rem;
+  margin-top: 0.25rem;
 }
 
 .create-post-file-input {
   margin: 0;
   padding: 0;
+}
+
+.custom-file-button {
+  background-color: #015e41;
+  border: 0;
+  border-radius: 0.5rem;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Poppins, sans-serif;
+  font-size: 1rem;
+  padding: 0.25rem 0.5rem;
+  text-align: center;
+  text-decoration: none;
+}
+.custom-file-button:hover {
+  background-color: #4267b2;
 }
 
 .meatball-menu {
@@ -2930,8 +2952,7 @@ p .index-inspire-change-text {
 }
 .post-dropdown-menu ul {
   list-style: none;
-  margin: 0;
-  margin-top: 1rem;
+  margin: 1rem 0 0;
   padding: 0;
 }
 .post-dropdown-menu li:not(.grayed-out) {
@@ -2941,7 +2962,7 @@ p .index-inspire-change-text {
   margin-left: 0.5rem;
   padding: 0;
 }
-.post-dropdown-menu li:not(.grayed-out):hover {
+.post-dropdown-menu li:hover {
   color: #015e41;
 }
 .post-dropdown-menu.show {
@@ -3894,7 +3915,12 @@ textarea.event-description-input {
 }
 .create-post-content button {
   border-radius: 0.5em;
+  font-size: 1rem;
+  font-weight: normal;
   margin-top: 0.5rem;
+}
+.create-post-content button:hover {
+  background-color: #4267b2;
 }
 .create-post-content img {
   max-width: 40vw;
@@ -3913,12 +3939,29 @@ textarea.event-description-input {
   font-size: 0.7rem;
   margin-bottom: 1rem;
   margin-left: 0.5rem;
-  margin-top: -0.5rem;
+  margin-top: 0.25rem;
 }
 
 .create-post-file-input {
   margin: 0;
   padding: 0;
+}
+
+.custom-file-button {
+  background-color: #015e41;
+  border: 0;
+  border-radius: 0.5rem;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Poppins, sans-serif;
+  font-size: 1rem;
+  padding: 0.25rem 0.5rem;
+  text-align: center;
+  text-decoration: none;
+}
+.custom-file-button:hover {
+  background-color: #4267b2;
 }
 
 .meatball-menu {
@@ -3950,8 +3993,7 @@ textarea.event-description-input {
 }
 .post-dropdown-menu ul {
   list-style: none;
-  margin: 0;
-  margin-top: 1rem;
+  margin: 1rem 0 0;
   padding: 0;
 }
 .post-dropdown-menu li:not(.grayed-out) {
@@ -3961,7 +4003,7 @@ textarea.event-description-input {
   margin-left: 0.5rem;
   padding: 0;
 }
-.post-dropdown-menu li:not(.grayed-out):hover {
+.post-dropdown-menu li:hover {
   color: #015e41;
 }
 .post-dropdown-menu.show {
