--- a/styles/styles.css
+++ b/styles/styles.css
@@ -256,6 +256,9 @@
   display: flex;
   margin-top: 0.6rem;
 }
+#contact-submit-button:hover {
+  background-color: #4267b2;
+}
 
 .contact-submit-response {
   display: flex;
@@ -981,6 +984,9 @@ p .index-inspire-change-text {
   margin-top: 1.9rem;
   width: 6.25rem;
 }
+.sign-in-button:hover {
+  background-color: #4267b2;
+}
 
 .sign-in-forgot-password {
   cursor: pointer;
@@ -1112,26 +1118,18 @@ p .index-inspire-change-text {
 }
 
 .dropdown-menu {
-  background-color: #d3d3d3;
-  border-radius: 4px;
   display: flex;
   flex-direction: column;
-  padding: 0.5rem 0.5rem 0.5rem 0.3rem;
   position: absolute;
-  right: 2rem;
+  right: 1rem;
   top: 8%;
   z-index: 1;
 }
-.dropdown-menu button {
-  background: none;
-  border: 0;
-  color: #000;
-  cursor: pointer;
-  display: flex;
-  font-weight: bolder;
-  margin: 0.7rem 0;
-  padding: 0;
-  position: relative;
+.dropdown-menu button:hover {
+  background-color: #fff;
+  border: 1px solid;
+  color: #015e41;
+  font-weight: bold;
 }
 
 .login-menu {
@@ -1512,6 +1510,9 @@ p .index-inspire-change-text {
   border-radius: 0.5rem;
   display: flex;
   margin-top: 0.6rem;
+}
+#contact-submit-button:hover {
+  background-color: #4267b2;
 }
 
 .contact-submit-response {
@@ -2116,6 +2117,9 @@ p .index-inspire-change-text {
   margin-top: 1.9rem;
   width: 6.25rem;
 }
+.sign-in-button:hover {
+  background-color: #4267b2;
+}
 
 .sign-in-forgot-password {
   cursor: pointer;
@@ -2247,26 +2251,18 @@ p .index-inspire-change-text {
 }
 
 .dropdown-menu {
-  background-color: #d3d3d3;
-  border-radius: 4px;
   display: flex;
   flex-direction: column;
-  padding: 0.5rem 0.5rem 0.5rem 0.3rem;
   position: absolute;
-  right: 2rem;
+  right: 1rem;
   top: 8%;
   z-index: 1;
 }
-.dropdown-menu button {
-  background: none;
-  border: 0;
-  color: #000;
-  cursor: pointer;
-  display: flex;
-  font-weight: bolder;
-  margin: 0.7rem 0;
-  padding: 0;
-  position: relative;
+.dropdown-menu button:hover {
+  background-color: #fff;
+  border: 1px solid;
+  color: #015e41;
+  font-weight: bold;
 }
 
 .login-menu {
@@ -2657,6 +2653,9 @@ p .index-inspire-change-text {
 .create-post-button button {
   align-self: flex-end;
   margin-bottom: 2.5rem;
+}
+.create-post-button:hover {
+  background-color: #4267b2;
 }
 
 .stories-about-us {
@@ -3110,6 +3109,9 @@ p .index-inspire-change-text {
   padding: 0.6rem;
   width: 195px;
 }
+.community-service-button:hover {
+  background-color: #4267b2;
+}
 
 .event-background {
   overflow: hidden;
@@ -3365,9 +3367,15 @@ textarea.event-description-input {
   border-radius: 0.5rem;
   margin-right: 0.5rem;
 }
+.create-event-buttons .event-submit:hover {
+  background-color: #4267b2;
+}
 .create-event-buttons .event-submit-cancel {
   border-radius: 0.5rem;
   margin-left: 0.5rem;
+}
+.create-event-buttons .event-submit-cancel:hover {
+  background-color: #4267b2;
 }
 
 .create-event-button {
@@ -3382,6 +3390,9 @@ textarea.event-description-input {
   margin-top: 1rem;
   padding: 0.6rem;
   width: 195px;
+}
+.create-event-button:hover {
+  background-color: #4267b2;
 }
 .create-event-button:disabled {
   background-color: #d3d3d3;
@@ -3698,6 +3709,9 @@ textarea.event-description-input {
 .create-post-button button {
   align-self: flex-end;
   margin-bottom: 2.5rem;
+}
+.create-post-button:hover {
+  background-color: #4267b2;
 }
 
 .stories-about-us {
@@ -4162,6 +4176,9 @@ textarea.event-description-input {
   padding: 0.6rem;
   width: 195px;
 }
+.community-service-button:hover {
+  background-color: #4267b2;
+}
 
 .event-background {
   overflow: hidden;
@@ -4417,9 +4434,15 @@ textarea.event-description-input {
   border-radius: 0.5rem;
   margin-right: 0.5rem;
 }
+.create-event-buttons .event-submit:hover {
+  background-color: #4267b2;
+}
 .create-event-buttons .event-submit-cancel {
   border-radius: 0.5rem;
   margin-left: 0.5rem;
+}
+.create-event-buttons .event-submit-cancel:hover {
+  background-color: #4267b2;
 }
 
 .create-event-button {
@@ -4434,6 +4457,9 @@ textarea.event-description-input {
   margin-top: 1rem;
   padding: 0.6rem;
   width: 195px;
+}
+.create-event-button:hover {
+  background-color: #4267b2;
 }
 .create-event-button:disabled {
   background-color: #d3d3d3;
