Added delete account and many updates

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -7,6 +7,7 @@ $black: #000;
 $white: #fff;
 $button-hover-yellow: #cf7;
 $gray: #d3d3d3;
+$disabled-gray: #ccc;
 $red: #f00;
 $black: #000;
 $light-gray: #e5e5e4;
