--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -18,6 +18,7 @@
       border-radius: .5rem;
       cursor: pointer;
       height: 3.5rem;
+      object-fit: cover;
       width: auto;
     }
 
@@ -119,7 +120,7 @@
   flex-direction: column;
   position: absolute;
   right: 1rem;
-  top: calc(8%);
+  top: calc(5%);
   z-index: 1;
 
   button {
@@ -137,7 +138,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: calc(7%);
+  top: calc(5%);
 }
 
 .login-menu-button {
