--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,6 +3,7 @@
 @import 'banner';
 @import 'colors';
 @import 'contact';
+@import 'delete-account';
 @import 'dontate';
 @import 'edit-profile';
 @import 'fonts';
@@ -86,6 +87,19 @@ button {
   cursor: pointer;
   font-size: 1.2rem;
   padding: .5rem;
+
+  &:hover {
+    background-color: $facebook-blue;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+
+    /* Override the hover effect when the button is disabled */
+    &:hover {
+      background-color: $disabled-gray;
+    }
+  }
 }
 
 label {
