--- a/styles/styles.css
+++ b/styles/styles.css
@@ -636,6 +636,7 @@ input:checked + .custom-checkbox::after {
 .edit-profile-name-input {
   border: 1px solid #ccc;
   border-radius: 5px;
+  font-size: 0.9rem;
   padding-left: 0.5rem;
   width: 33%;
 }
@@ -645,6 +646,7 @@ input:checked + .custom-checkbox::after {
   border: 1px solid #ccc;
   border-radius: 5px;
   color: #000;
+  font-size: 0.9rem;
   text-decoration: none;
   width: 33%;
 }
@@ -652,7 +654,9 @@ input:checked + .custom-checkbox::after {
 .edit-profile-bio-textarea {
   border: 1px solid #ccc;
   border-radius: 5px;
-  min-height: 80px;
+  font-size: 0.9rem;
+  line-height: 1.5;
+  min-height: 200px;
   overflow-wrap: break-word;
   padding: 10px;
   resize: vertical;
@@ -2915,6 +2919,7 @@ p .index-inspire-change-text {
   grid-column: 3;
   grid-row: 2;
   justify-content: flex-end;
+  margin-top: -0.5rem;
   padding-right: 1rem;
 }
 
@@ -2932,7 +2937,7 @@ p .index-inspire-change-text {
 .post-user-name {
   align-items: center;
   display: flex;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 .post-location {
@@ -3997,6 +4002,7 @@ textarea.event-description-input {
   grid-column: 3;
   grid-row: 2;
   justify-content: flex-end;
+  margin-top: -0.5rem;
   padding-right: 1rem;
 }
 
@@ -4014,7 +4020,7 @@ textarea.event-description-input {
 .post-user-name {
   align-items: center;
   display: flex;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 .post-location {
