Drop down button style updates

--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -64,7 +64,7 @@
   cursor: pointer;
   display: flex;
   font-family: Rubik, Times, sans-serif;
-  font-size: 28px;
+  font-size: 16px;
   height: 2rem;
   justify-content: center;
   margin-bottom: auto;
@@ -118,9 +118,9 @@
 .dropdown-menu {
   display: flex;
   flex-direction: column;
+  margin-top: .5rem;
   position: absolute;
-  right: 1rem;
-  top: calc(5%);
+  right: 2rem;
   z-index: 1;
 
   button {
