--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,6 +15,7 @@
 @import 'navbar';
 @import 'privacy';
 @import 'profile';
+@import 'report';
 @import 'signup';
 @import 'stories';
 @import 'verify-email';
