--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,6 +65,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 .about-us-content {
@@ -3750,6 +3752,69 @@ textarea.event-description-input {
     white-space: normal;
   }
 }
+.report-form-group {
+  margin-bottom: 1rem;
+  padding: 0;
+}
+
+.label-row,
+.input-row {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.input-row {
+  margin-bottom: 2rem;
+}
+
+.report-form-label {
+  flex: 1;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  width: 100%;
+}
+
+.report-form-select {
+  flex: 1;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  width: 100%;
+}
+
+.results-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 1rem;
+}
+
+.results-table th,
+.results-table td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+
+.results-table th {
+  background-color: #f2f2f2;
+}
+
+.report-total-weight {
+  display: flex;
+  font-size: 1.5rem;
+  font-weight: bold;
+  justify-content: center;
+  margin-top: 1.5rem;
+}
+
+.report-weight-value {
+  color: #015e41;
+  font-weight: bolder;
+  margin-left: 0.5rem;
+}
+
 .signup-form {
   align-items: center;
   display: flex;
